k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-exporter-3000
  labels:
    app: ze3000
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ze3000
  template:
    metadata:
      labels:
        app: ze3000
    spec:
      containers:
      - name: ze3000
        image: rzrbld/ze3000:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      ports:
      - containerPort: 8080
