k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ze3000-service
spec:
  selector:
    app: ze3000
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8080
